// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SnapShop - Instantanesas Exepsion de codigo 1`] = `
Object {
  "id": Any<Number>,
  "name": "Lisbey Urrea",
}
`;

exports[`SnapShop - Instantanesas deberia fallar la instantanea  1`] = `
Object {
  "createAt": Any<Date>,
  "id": Any<Number>,
}
`;

exports[`SnapShop - Instantanesas primer SnapShop  1`] = `
Object {
  "gender": "Male",
  "id": 2,
  "name": "Rick Sanchez",
  "species": "Human",
  "status": "Alive",
}
`;
